# prongs

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements-dev.txt  ruff.toml
.github/: dependabot.yml
.github/workflows/: lint.yml  release.yml  tag.yml
app/: Dockerfile  config.py  run.py  test.py
app/scanners/: accessible_db.py  accessible_rdp.py  password_ssh.py
test/: test_app.py
