[project]
name = "prongs"
version = "0.2.0"
description = "Fast, custom security scanner"
authors = [{name = "Thomas Laurenson", email = "tom.laurenson@auckland.ac.nz"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
dependencies = [
    "paramiko>=3.5.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.11.12",
    "uv>=0.4.20",
    "pytest>=8.3.3",
]

[tool.setuptools]
packages = []

[tool.ruff]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "D",  # pydocstyle
]
preview = true
ignore = [
    "D100",  # Missing docstring in public module
    "D103",  # Missing docstring in public function
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"
